Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57676

Qt Device Utilities Settings hangs when trying to access Bluetooth if bluez is not running

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.9
    • 5.8.0 RC
    • Device Creation
    • None
    • Device: Boot2Qt 2.1.1 on Toradex Apalis i.MX6
      Host: Qt 5.8.0 RC, GCC 6.2.1, OpenSUSE Tumbleweed

      and

      Device: Toradex Colibri VF61
    • 14c5930e432edb0d2d1960b182a7305b334bde96

    Description

      Qt Device Utilities Settings hangs when trying to access Bluetooth. The hang lasts over a minute and the whole screen is frozen for the whole time. This doesn't happen on 5.7.1 so this appears to be a regression.

      Steps to reproduce:
      1. Launch Qt Demo launcher
      2. Go to settings and click Bluetooth
      -> Demo launcher hangs

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              teemu.holappa Teemu Holappa
              khormi Kari Hormi
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes