Fix issue when no Bluetooth device is available

Added async scan of the bluetooth adapter.
Done some cleanup to the public class.

Task-number: QTBUG-57676
Change-Id: Ia845f2f8c18fb8272160167482e5124c0b43fee7
Reviewed-by: Mikko Gronoff <mikko.gronoff@qt.io>
Reviewed-by: Samuli Piippo <samuli.piippo@qt.io>